<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ToolBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_backspace"
                android:layout_gravity="center"
                android:onClick="clickBack" />

            <TextView
                android:layout_weight="10"
                android:layout_marginRight="65dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chính sách và cam kết"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"/>

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DADADA"/>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:id="@+id/scrollviewaboutus">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_privacy_policy"
                android:textColor="#686868"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/content_01_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAboutUs"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_01_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_02_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_02_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_03_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_03_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_04_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_05_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_06_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_06_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_07_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_07_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_08_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_08_privacy_policy"
                android:textColor="#686868"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_09_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="4dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>