<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".callCSKHTrung"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvchsktrung"
        android:text="@string/cskh"
        ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dt"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"></TextView>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Gọi tổng đài"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_fill_rounded_color"
        android:shadowRadius="10"
        android:textColor="@android:color/white"></Button>

</LinearLayout>