<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ToolBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_backspace"
                android:layout_gravity="center"
                android:onClick="clickBack" />

            <TextView
                android:layout_weight="10"
                android:layout_marginRight="65dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới thiệu về chúng tôi"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/imgarago"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleX="0.3"
            android:background="@drawable/logo_arago"/>

        <ScrollView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollviewaboutus">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_aboutus"
                    android:textColor="@color/colorAccent"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/content_aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAboutUs"/>

                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_special"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="4dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_special"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="4dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>